webserver-nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-nginx
  namespace: webserver
  labels:
    app: webserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - name: webserver
        image: nginx:alpine
        ports:
          - containerPort: 80
