webserver-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver-nginx
  namespace: webserver
spec:
  # type: LoadBalancer
  selector:
    app: webserver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
